# ChangeLog for media-sound/shntool
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/shntool/ChangeLog,v 1.17 2008/10/04 14:10:26 maekke Exp $

  04 Oct 2008; Markus Meier <maekke@gentoo.org> shntool-3.0.8.ebuild:
  amd64/x86 stable, bug #238863

  29 Sep 2008; Friedrich Oslage <bluebird@gentoo.org> shntool-3.0.8.ebuild:
  Stable on sparc, bug #238863

*shntool-3.0.8 (29 Aug 2008)

  29 Aug 2008; Alexis Ballier <aballier@gentoo.org> +shntool-3.0.8.ebuild:
  version bump

*shntool-3.0.7 (19 Mar 2008)

  19 Mar 2008; Alexis Ballier <aballier@gentoo.org> +shntool-3.0.7.ebuild:
  version bump, thanks to Sergey Dryabzhinsky
  <sergey.dryabzhinsky@gmail.com> for notifying us in bug #213866

  08 Jun 2007; Alexis Ballier <aballier@gentoo.org> -shntool-2.0.3.ebuild,
  -shntool-3.0.1.ebuild:
  Cleanup old versions

*shntool-3.0.3 (08 Jun 2007)

  08 Jun 2007; Alexis Ballier <aballier@gentoo.org> +shntool-3.0.3.ebuild:
  Version bump

*shntool-3.0.2 (15 Apr 2007)

  15 Apr 2007; Alexis Ballier <aballier@gentoo.org> +shntool-3.0.2.ebuild:
  Version bump, bug #174309

*shntool-3.0.1 (12 Feb 2007)

  12 Feb 2007; Alexis Ballier <aballier@gentoo.org> +shntool-3.0.1.ebuild:
  Version bump

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

*shntool-2.0.3 (20 Nov 2004)

  20 Nov 2004; Tony Vroon <chainsaw@gentoo.org> +shntool-2.0.3.ebuild:
  Version bump as requested by Jussi Sainio <jusic@mbnet.fi> in bug #71663.

  15 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> shntool-1.2.3.ebuild:
  Stable amd64, sparc.

  19 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> shntool-1.2.3.ebuild:
  ~amd64 ~sparc

  20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> shntool-1.2.3.ebuild:
  Added IUSE.

  01 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> shntool-1.2.3.ebuild:
  Ebuild cleanup
