@@ -1,4 +1,6 @@
+DIST shntool-3.0.10.tar.gz 216061 RMD160 3c41c5da4ee11127dae02609052d1f1a355aef4a SHA1 7a2bc8801e180cf582f0e39775603582e35d50d2 SHA256 74302eac477ca08fb2b42b9f154cc870593aec8beab308676e4373a5e4ca2102
 DIST shntool-3.0.8.tar.gz 209497 RMD160 233ff4bdaa8b8c09b76ac6ff5b163075d802b68c SHA1 b2491ac059a4bd4933d59b4e8821f41ca6d263cd SHA256 13d23a36f8ec3b605dacbaab47a66297fa8c3dc18770cea68108e9a50f40d4e7
+EBUILD shntool-3.0.10.ebuild 815 RMD160 cea9bed093d21b2f7eadd392f52f6bdfc68a1ac6 SHA1 1680dc991acd29a179912c003a37da0fc295acf8 SHA256 98da58ab0fb1d0ccbb7e7db66f24b37ecf73251b131bdd0704c12322032d368f
 EBUILD shntool-3.0.8.ebuild 807 RMD160 4f62eced43de29b298dcf6db9e731f9e11f75092 SHA1 4491e9d1427affcb8da08fc4be797d36ff2da582 SHA256 a273078e9024d60cb385eab28828df3bdd4fba1c1c0d83e824e30e39860ed593
-MISC ChangeLog 2142 RMD160 b3a973b1cf94bf68795cf79fea3e91182e5ef6d8 SHA1 384c0ccc8364937aa9ef8991a31f53742a9d2669 SHA256 03757a39692f4e26ed54987996fb65ab83ed9e073dada7ace934d17f7c2d6e5e
+MISC ChangeLog 2275 RMD160 5db30ff1a661fbf2fabb5aa8226351c6cecb4e59 SHA1 64b6ca41b2716d55233a561af4668a03e927fe18 SHA256 d71db04c7afa8d0b3a18f547882fe1a85d74849ca867889746a05a3f337e70ec
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
