@@ -1,0 +1,23 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/shntool/shntool-3.0.10.ebuild,v 1.1 2009/06/21 15:09:47 flameeyes Exp $
+
+DESCRIPTION="shntool is a multi-purpose WAVE data processing and reporting utility"
+HOMEPAGE="http://shnutils.freeshell.org/shntool/"
+SRC_URI="http://shnutils.freeshell.org/shntool/dist/src/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos"
+IUSE="flac shorten sox wavpack"
+
+RDEPEND="flac? ( media-libs/flac )
+	sox? ( media-sound/sox )
+	shorten? ( media-sound/shorten )
+	wavpack? ( media-sound/wavpack )"
+DEPEND="${RDEPEND}"
+
+src_install () {
+	emake DESTDIR="${D}" install || die "emake install failed"
+	dodoc NEWS README ChangeLog AUTHORS doc/* || die
+}
